TreeAnalysis/Plot/Temp5/SR_compare_red_bkg_MCdriven.txt
Error in <TFile::TFile>: file ../results/ZZjAnalyzer_CR2P2F/WH126.root does not exist
Error in <TFile::TFile>: file ../results/ZZjAnalyzer_CR2P2F/ZH126.root does not exist
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../results/ZZjAnalyzer_CR2P2F/TTGJets.root therefore preventing schema evolution when reading this file.
Error in <TFile::TFile>: file ../results/ZZjAnalyzer_CR2P2F/DYJetsToLLTuneZ2M10.root does not exist
Error in <TFile::TFile>: file ../results/ZZjAnalyzer_CR3P1F/WH126.root does not exist
Error in <TFile::TFile>: file ../results/ZZjAnalyzer_CR3P1F/ZH126.root does not exist
Error in <TFile::TFile>: file ../results/ZZjAnalyzer_CR3P1F/DYJetsToLLTuneZ2M10.root does not exist
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../results/ZZjAnalyzer_SR/WWWJets.root therefore preventing schema evolution when reading this file.
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../results/ZZjAnalyzer_SR/TTWJets.root therefore preventing schema evolution when reading this file.
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../results/ZZjAnalyzer_SR/TTGJets.root therefore preventing schema evolution when reading this file.
Error in <TFile::TFile>: file ../results/ZZjAnalyzer_SR/DYJetsToLLTuneZ2M10.root does not exist
Info in <TCanvas::Print>: file Stack_SR_compare_red_bkgMCdriven.png has been created
Info in <TCanvas::SaveAs>: ROOT file Stack_SR_compare_red_bkgMCdriven.root has been created
Info in <TGFileContainer::AddFile>: Broken symlink of .#provaVar.py.
Info in <TGFileContainer::AddFile>: Broken symlink of .#provaVar.py.
Info in <TCanvas::Print>: file /afs/cern.ch/work/g/ggonella/slc6/CMSSW_5_3_18/src/VVXAnalysis/TreeAnalysis/Plot/Stack_SR_compare_red_bkg_MCdriven.png has been created

######### Contribution to fake rate #########

ZZTo2e2mu .......................... 0.58877482958
ZZTo2e2muJJ_SMHContinInterf_H125.6 .......................... 0.0140387251978
ZZTo4eJJ_SMHContinInterf_H125.6 .......................... 0.00587436780015
ZZTo4e .......................... 0.257140570463
ZZTo4mu .......................... 0.319634183463
ZZTo4muJJ_SMHContinInterf_H125.6 .......................... 0.00809399138428
ggTo2e2mu_SMHContinInterf-MCFM67_H125.6 .......................... 0.0477266975979
ggTo4e_SMHContinInterf-MCFM67_H125.6 .......................... 0.01954497611
ggTo4mu_SMHContinInterf-MCFM67_H125.6 .......................... 0.0281460506965
ZZZJets .......................... 0.00611000822994
WZZJets .......................... 0.0120558829502
WH126  has no enetries or is a zombie
ZH126  has no enetries or is a zombie
ttH126 .......................... 0.0015850520079
WWZJets .......................... 0.0293999861381
TTZJets .......................... 0.162190893298
TTWWJets .......................... 0.000639988704895
WWWJets .......................... 0.00143503529296
WZ .......................... 1.05760969603
TTTo2L2Nu2B .......................... 0.271818278559
TTWJets .......................... 0.0120522374009
TTGJets  has no enetries or is a zombie
DYJetsToLLTuneZ2M50 .......................... 2.34996542388
DYJetsToLLTuneZ2M10  has no enetries or is a zombie
                                __________________ 

Reducible background---------->  5.2327934754 


######### MonteCarlo samples #########

WWWJets  has no entries or is a zombie
WZ .......................... 0.595393285155
TTTo2L2Nu2B .......................... 0.128173585981
TTWJets  has no entries or is a zombie
TTGJets  has no entries or is a zombie
DYJetsToLLTuneZ2M50 .......................... 2.0440299511
DYJetsToLLTuneZ2M10  has no entries or is a zombie
digit anything you want to end the script 
Traceback (most recent call last):
  File "./scriptStack.py", line 46, in <module>
    CloseVar=input("digit anything you want to end the script \n")        
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
